# runIT_test

./: .gitignore  C-roadmap.md  CMakeLists.txt  README.md  scenario_feedback.txt  sdkconfig  sdkconfig.old  test.txt  test_dump.txt  valuedump.txt
components/emulator/: CMakeLists.txt  emu_global_access.c  emulator.c  emulator_block_utils.c  emulator_blocks.c  emulator_body.c  emulator_loop.c  emulator_parse.c  emulator_variables.c
components/emulator/blocks/: block_clock.c  block_counter.c  block_for.c  block_global_access.c  block_in_selector.c  block_latch.c  block_logic.c  block_math.c  block_q_selector.c  block_selector.c  block_set.c  block_set_global.c  block_timer.c  blocks_functions_list.c  emu_blocks.c  emulator_blocks.c  emulator_blocks_functions_list.c
components/emulator/blocks/include/: block_clock.h  block_counter.h  block_edge.h  block_for.h  block_global_access.h  block_in_selector.h  block_latch.h  block_logic.h  block_math.h  block_q_selector.h  block_rs_latch.h  block_selector.h  block_set.h  block_set_global.h  block_sr_latch.h  block_timer.h  blocks_all_list.h  blocks_functions_list.h  emu_blocks.h  emulator_blocks.h  emulator_blocks_functions_list.h  emulator_errors.h
components/emulator/core/: PACKETS.MD  PacketsDesc.md  dupa.c  emu_body.c  emu_buffs.c  emu_helpers.c  emu_interface.c  emu_logging.c  emu_loop.c  emu_parse.c  emu_subscribe.c  emu_types_info.c  emu_variables.c  emu_variables_acces.c  emulator_body.c  emulator_debug.c  emulator_errors.c  emulator_interface.c  emulator_logging.c  emulator_loop.c  emulator_parse.c  emulator_variables.c  emulator_variables_acces.c  types_info.c
components/emulator/core/include/: block_types.h  emu_body.h  emu_buffs.h  emu_helpers.h  emu_interface.h  emu_logging.h  emu_logs_config.h  emu_loop.h  emu_parse.h  emu_subscribe.h  emu_types.h  emu_types_info.h  emu_variables.h  emu_variables_acces.h  emulator_body.h  emulator_debug.h  emulator_errors.h  emulator_interface.h  emulator_logging.h  emulator_logs_config.h  emulator_loop.h  emulator_parse.h  emulator_types.h  emulator_variables.h  emulator_variables_acces.h  error_macros.h  error_types.h  (+4 more)
components/emulator/include/: emu_global_access.h  emulator.h  emulator_block_utils.h  emulator_blocks.h  emulator_body.h  emulator_loop.h  emulator_parse.h  emulator_types.h  emulator_variables.h  order_codes.txt
components/emulator/utils/: utils_block_in_q_access.c  utils_global_access.c  utils_parse.c
main/: CMakeLists.txt  gpio_manager.h  idf_component.yml  main.c
main/ble/: gap.c  gatt_buff.c  gatt_svc.c
main/ble/include/: common.h  gap.h  gatt_buff.h  gatt_svc.h  gatt_uuids.h
main/i2c_tasks/: i2c_tasks.c
main/i2c_tasks/include/: i2c_tasks.h
(+108 files in other folders)
