idf_component_register(
    SRCS 
        "blocks/emu_blocks.c"
        "blocks/blocks_functions_list.c"
        "core/emu_interface.c"
        "core/emu_body.c"
        "core/emu_loop.c"
        "core/emu_parse.c"
        "core/emu_variables.c"
        "core/emu_logging.c"
        "core/emu_variables_acces.c"
        "core/emu_types_info.c"
        "blocks/block_math.c"
        "blocks/block_logic.c"
        "blocks/block_for.c"
        "blocks/block_timer.c"
        "blocks/block_set.c"
        "blocks/block_counter.c"
        "blocks/block_clock.c"
        "blocks/block_in_selector.c"
        "blocks/block_q_selector.c"
        "blocks/block_latch.c"
        "core/emu_helpers.c"

    INCLUDE_DIRS 
        "blocks/include"
        "core/include"

    REQUIRES 
        esp_timer 
        main
)
